--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,62 @@
 .hidden {
   display: none;
 }
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 50px auto;
+  background-color: aqua;
+}
+
+.title {
+  width: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-direction: row;
+}
+.buttonContainer-button {
+  display: flex;
+  align-items: center;
+}
+.button {
+  height: 50px;
+  border: 5px solid black;
+  border-radius: 20px;
+  align-items: center;
+  padding: 10px;
+}
+
+.gameCards {
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  padding: 40px;
+  gap: 40px;
+  justify-content: flex-start;
+}
+.h1 {
+  font-size: 20px;
+  color: red;
+}
+
+.buttonInitiate {
+  height: 50px;
+  border: 5px solid black;
+  border-radius: 20px;
+  align-items: center;
+}
+
+.gameText {
+  display: flex;
+  padding: 25px;
+  align-content: center;
+}
+
+/* .game {
+  padding: 30px;
+} */
